refactor: update controllers to return ResponseEntity